detail screen added

--- a/CatTracker/Base.lproj/Main.storyboard
+++ b/CatTracker/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="86r-MA-VUn">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="o24-y6-e6D">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Critter Table View Controller-->
+        <!--CU Critters-->
         <scene sceneID="tPE-OH-DSj">
             <objects>
                 <tableViewController id="86r-MA-VUn" customClass="CritterTableViewController" customModule="CatTracker" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,7 +18,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="D1Y-qL-55j" customClass="CritterTableViewCell" customModule="CatTracker" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="90"/>
+                                <rect key="frame" x="0.0" y="92" width="375" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="D1Y-qL-55j" id="8mA-wf-Jph">
                                     <frame key="frameInset" width="375" height="89"/>
@@ -56,15 +56,22 @@
                             <outlet property="delegate" destination="86r-MA-VUn" id="J4L-Q6-sgv"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="CU Critters" id="288-cy-QP2">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="RTG-t1-5aM">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="show" id="6Zc-Dt-w5T"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1dK-08-c3p" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-610.39999999999998" y="123.68815592203899"/>
+            <point key="canvasLocation" x="328.80000000000001" y="123.68815592203899"/>
         </scene>
-        <!--View Controller-->
+        <!--Critter View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CatTracker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="CritterViewController" customModule="CatTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -73,8 +80,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Mgp-wr-4b6">
-                                <frame key="frameInset" minX="16" minY="36" width="343" height="358"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Mgp-wr-4b6">
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="this cat appears at" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y6z-kC-Vpc">
                                         <nil key="textColor"/>
@@ -90,9 +96,15 @@
                                             <outletCollection property="gestureRecognizers" destination="UBb-M9-Htx" appends="YES" id="1Gg-B1-SKc"/>
                                         </connections>
                                     </imageView>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="flV-mV-UZR" userLabel="Details Text Field">
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="Y6z-kC-Vpc" secondAttribute="trailing" id="9ov-JK-lwt"/>
+                                    <constraint firstAttribute="trailing" secondItem="flV-mV-UZR" secondAttribute="trailing" id="apn-vI-eI8"/>
                                 </constraints>
                             </stackView>
                         </subviews>
@@ -104,6 +116,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="detailsTextField" destination="flV-mV-UZR" id="VkT-NY-wIL"/>
                         <outlet property="nameTextField" destination="Y6z-kC-Vpc" id="oeS-Wl-4yb"/>
                         <outlet property="photoImageView" destination="8Ke-Yf-MaY" id="4b6-Iq-TTD"/>
                     </connections>
@@ -115,7 +128,25 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="117.59999999999999" y="122.78860569715144"/>
+            <point key="canvasLocation" x="1056.8" y="122.78860569715144"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="pf6-Ko-WiM">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="o24-y6-e6D" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Znt-sZ-TD4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="86r-MA-VUn" kind="relationship" relationship="rootViewController" id="A6q-0r-Rgq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="38D-JL-hLa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-610.39999999999998" y="123.68815592203899"/>
         </scene>
     </scenes>
     <resources>
